crates/lintbook-tests/tests/snapshots/integration_test__rust_generated_rule_reports_violation.snap
---
source: crates/lintbook-tests/tests/integration_test.rs
expression: output
---
{
  "files": [
    {
      "duration": 0.0,
      "file_path": "bad.rs",
      "language": "Rust",
      "status": "Error",
      "violations": [
        {
          "column": 13,
          "line": 1,
          "lint_id": "rust.no-dbg",
          "lint_name": "rust.no-dbg",
          "message": "We don't want dbg! macro calls in production code."
        }
      ]
    }
  ],
  "llm_violations": [],
  "statistics": {
    "files_scanned": 1,
    "files_skipped": 0,
    "files_with_violations": 1,
    "llm_violations_count": 0,
    "total_duration_ms": 0.0,
    "total_files": 1,
    "total_violations": 1
  }
}
